# mcp

./: .gitignore  AIDER-README.md  Cargo.toml  README.md  SUPABASE_MCP_FINDINGS.md  debug_config.json.template  debug_repl.sh  eval_config.toml  fixed_config.json  mcp_architecture.mmd  mcp_client  minimal_config.json  provider_models.toml  repl_fix.sh  run_mcp_with_all_tools.sh  simple_client.rs  simple_config.json  tailwind.config.js  test-tools.sh  test_openrouter.sh  test_rpc.rs  test_supabase_server.rs
configs/: debug_config.json
docs/: RLLM.md  changes.md  client_dev.md  implementing_new_providers.md  rust-sdk_mcp_official.md  rust-sdk_serve.md  rust-sdk_tool_conversion.md  rust-sdk_tools.md  rusty_line.md  smiley_tool_calling.md  spec.md  specification.md  sse_implementation.md  typescript_sdk.md
docs/integration/: rllm_integration.md
docs/node/: finish_implementation.md  langchain.md
eval_tasks/: task_code_analysis_and_refactor.txt  task_code_search_analyze_chart.txt  task_data_analysis_and_chart.txt  task_market_analysis_and_report.txt  task_research.txt  task_research_and_summarize.txt  task_travel_planning_and_summary.txt
mcp_host/: Cargo.toml  config.json
mcp_host/examples/: README.md  direct_supabase_test.rs  smiley_delimiter_example.rs
mcp_host/src/: ai_client.rs  anthropic.rs  conversation_logic.rs  conversation_service.rs  conversation_state.rs  deepseek.rs  gemini.rs  host.rs  lib.rs  main.rs  main_repl.rs  openai.rs  openrouter.rs  rllm_adapter.rs  smiley_tool_parser.rs  tool_parser.rs
mcp_host/src/host/: config.rs  error.rs  mod.rs  protocol.rs  server_manager.rs
mcp_host/src/repl/: command.rs  connections.rs  helper.rs  mod.rs  test_utils.rs
mcp_host/tests/: ai_client_test.rs  conversation_service_json_test.rs  conversation_service_test.rs  conversation_state_test.rs  cross_model_test.rs  end_to_end_test.rs  host_test.rs  multi_tool_chain_test.rs  repl_command_test.rs  server_manager_test.rs  smiley_repl_integration_test.rs  smiley_tool_parser_test.rs
mcp_test/: Cargo.toml
mcp_test/src/: main.rs
mcp_tools/: Cargo.toml
mcp_tools/src/: aider.rs  bash.rs  brave_search.rs  email_validator.rs  git_integration.rs  gmail_integration.rs  google_search.rs  interactive_terminal.rs  lib.rs  long_running_task.rs  main.rs  mermaid_chart.rs  netlify.rs  planner.rs  process_html.rs  regex_replace.rs  scraping_bee.rs  supabase.rs  tool_impls.rs  tool_trait.rs
mcp_tools/tests/: bash_tool_test.rs  concurrent_tool_test.rs  long_running_task_test.rs  tool_auth_test.rs  tool_factory_test.rs  tool_result_formatting_test.rs  tool_schema_validation_test.rs
multi-client/: README.md  ai_config.json  index.ts  jest.config.cjs  package-lock.json  package.json  provider_models.toml  repomix-output.xml  tailwind.config.js  tsconfig.json
multi-client/conversations/: 110e7f76-6174-4b76-b4cd-e557d13f6881.json  13d9e2f3-8901-4613-b4cb-743cee4deb74.json  483bfcc6-23c7-423d-80c3-6b5c5e0f9f5c.json  63ba44d9-7b23-4741-a291-1f192c3a0fa4.json  77c09c9c-c074-4d41-8849-57a79b160f62.json  a4b3550a-758d-45d7-99e1-2677a8241304.json  bc016cef-4d72-4c62-814d-47126595518b.json
multi-client/coverage/: clover.xml  coverage-final.json  lcov.info
multi-client/coverage/lcov-report/: index.html
multi-client/coverage/lcov-report/src/: ServerManager.ts.html  index.html
multi-client/src/: Repl.ts  ServerManager.interface.test.ts  ServerManager.ts  dummyTests.test.ts  moreDummyTests.test.ts  types.ts
multi-client/src/ai/: AiClientFactory.providers.test.ts  AiClientFactory.test.ts  AiClientFactory.ts  IAiClient.ts  LangchainClient.test.ts  LangchainClient.ts
multi-client/src/conversation/: ConversationManager.ts  ConversationState.compaction.test.ts  ConversationState.test.ts  ConversationState.ts  Message.test.ts  Message.ts  ToolParser.test.ts  ToolParser.ts
multi-client/src/conversation/execution/: ToolExecutor.interface.test.ts  ToolExecutor.ts
multi-client/src/conversation/persistence/: ConversationPersistenceService.interface.test.ts  ConversationPersistenceService.ts
multi-client/src/conversation/prompts/: PromptFactory.test.ts  PromptFactory.ts
multi-client/src/conversation/verification/: VerificationService.ts
multi-client/src/utils/: toolConverter.test.ts  toolConverter.ts
multi-client/src/web/: WebServer.ts
multi-client/src/web/routes/: ai.routes.ts  config.routes.ts  conversation.routes.ts  servers.routes.ts
multi-client/web/: app.js  index.html  styles-additional.css  styles.css
multi-client/web-react/src/: App.tsx
multi-client/web-react/src/hooks/: useSocket.ts
multi-client/web-react/src/services/: api.ts
multi-client/web-react/src/store/: store.ts
multi-client/web/css/: README.md  base.css  chat.css  components.css  layout.css  modals.css  responsive.css  sidebar.css
multi-client/web/js/: main.js
multi-client/web/js/api/: apiClient.js
multi-client/web/js/socket/: socketClient.js
multi-client/web/js/state/: appState.js
multi-client/web/js/ui/: chatUI.js  headerUI.js  modalUI.js  sidebarUI.js  toast.js
multi-client/web/js/utils/: helpers.js
prompts/: eval_grading_prompt.txt
repl_test/: Cargo.toml  config.json
repl_test/src/: main.rs
scripts/: debug_supabase_server.py
shared_protocol_objects/: Cargo.toml  README.md
shared_protocol_objects/src/: lib.rs
shared_protocol_objects/src/adapters/: error.rs  feature_detection.rs  mod.rs  rmcp_protocol.rs  rmcp_service.rs  rmcp_transport.rs  telemetry.rs  transport_factory.rs
shared_protocol_objects/src/client/: adapter.rs  mod.rs  testing.rs  trait_def.rs
shared_protocol_objects/src/examples/: client_example.rs  mod.rs
shared_protocol_objects/src/rpc/: client.rs  error.rs  id_generator.rs  mod.rs  progress.rs  sse_client_transport.rs  sse_server_transport.rs  transport.rs
shared_protocol_objects/tests/: json_rpc_parsing_test.rs  progress_notification_test.rs  rpc_error_handling_test.rs  server_capability_test.rs  transport_resilience_test.rs
supabase_test/: Cargo.toml
supabase_test/src/: main.rs
test_config/: test.json
(+23 files in other folders)
