[workspace]
resolver = "2"
members = [
    "shared_protocol_objects",
    "mcp_host", 
    "mcp_tools",
    "mcp_test",
    "repl_test"
]
default-members = ["mcp_host"]

[workspace.dependencies]
env_logger = "^0.10"
console = "^0.15"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
anyhow = "^1.0"
log = "^0.4"
base64 = "^0.22.0"
reqwest = { version = "^0.11", features = ["json", "stream"] }
futures = "^0.3"
eventsource-stream = "^0.2"
tokio = { version = "^1.0", features = ["full"] }

image-webp = "^0.1.3"      
zerofrom = "^0.1.5"         

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[patch.crates-io]
# Apply patches if needed to ensure compatibility with rustc 1.75.0
