[workspace]
resolver = "2"
members = [
    # "shared_protocol_objects", # Removed
    "mcp_host",
    "mcp_tools",
    "mcp_test",
    "repl_test"
]
default-members = ["mcp_host"]

[workspace.dependencies]
env_logger = "^0.10"
console = "^0.15"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
anyhow = "^1.0"
log = "^0.4"
base64 = "^0.22.0"
reqwest = { version = "^0.11", features = ["json", "stream"] }
futures = "^0.3"
eventsource-stream = "^0.2"
tokio = { version = "^1.0", features = ["full"] }

image-webp = "^0.1.3"      
zerofrom = "^0.1.5"
# RLLM is now a standard dependency
rllm = { version = "1.1.7", features = ["openai", "anthropic", "ollama", "deepseek", "xai", "phind", "google"] }
# Add rmcp dependency
rmcp = { version = "0.1.5", features = ["server", "client", "transport-child-process", "transport-io"] } # Add necessary features

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[patch.crates-io]
# Apply patches if needed to ensure compatibility with rustc 1.75.0
