[package]
name = "mcp_host"
version = "0.1.0"
edition = "2021"

[[example]]
name = "direct_supabase_test"
path = "examples/direct_supabase_test.rs"

[[bin]]
name = "mcp_eval"
path = "src/bin/mcp_eval.rs"

[dependencies]
env_logger = { workspace = true }
anyhow = "1.0.94"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
uuid = {version ="1.11.0", features = ["v4", "serde"] }
regex = "1.9.5"
lazy_static = "1.4.0"
schemars = "0.8"
base64 = "0.22.1"
image = "0.25.5"
sha2 = "0.10.8"
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream"] } 
log = "0.4.22"
console.workspace = true
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros", "ws"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] } # Added env-filter feature
bytes = "1.9.0"
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["trace"] }
async-openai = "0.26.0"

# New dependencies for the improved REPL
rustyline = { version = "12.0", features = ["with-file-history"] } # Enable file history
shellwords = "1.1"
dirs = "5.0"
tracing-appender = "0.2"
thiserror = "2.0.12"
once_cell = "1.21.3"
dotenvy = "0.15" # Added for loading .env files
shellexpand = "3.1" # Added for eval config path expansion

# RLLM is now a standard dependency
rllm = { workspace = true }
toml = "0.8" # Added for provider models config and eval config
rmcp.workspace = true

[dev-dependencies]
tokio-test = "0.4"
