[package]
name = "repl_test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20", features = ["full"] }
env_logger = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
shared_protocol_objects = { path = "../shared_protocol_objects" }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
