[package]
name = "shared_protocol_objects"
version = "0.1.0"
edition = "2021"

[features]
default = []
examples = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tracing = "0.1"
futures = "0.3"
nix = { version = "0.26", features = ["signal", "process"] }
