[package]
name = "shared_protocol_objects"
version = "0.1.0"
edition = "2021"

[features]
default = ["rmcp-integration"]
rmcp-integration = ["dep:rmcp"]
examples = []
sse_server = ["dep:axum", "dep:tower-http"] # Feature flag for server-side SSE

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-stream = { version = "0.1", features = ["io-util", "sync"] } # Combined features
tracing = "0.1"
futures = "0.3"
nix = { version = "0.26", features = ["signal", "process"] }
bytes = "1.0" # Added for reading stderr buffer
reqwest = { version = "0.11", features = ["json", "stream"] } # Added reqwest dependency

# SSE Dependencies
reqwest-eventsource = "0.5" # Or latest compatible version
axum = { version = "0.7", optional = true, features = ["ws", "json"] } # Optional for server-side
tower-http = { version = "0.5", optional = true, features = ["trace"] } # Optional for server-side
# Removed duplicate tokio-stream entry

# Optional RMCP dependency
rmcp = { version = "0.1", optional = true, features = ["client", "transport-child-process"] }
