[package]
name = "supabase_test"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
shared_protocol_objects = { path = "../shared_protocol_objects" }
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.94"
log = "0.4.22"
env_logger = "0.11.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
